<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LoginActivity"
    android:id="@+id/loginBack">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:background="@color/colorBackground">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="350dp"
            android:orientation="vertical"
            android:background="@color/colorPrimary">

            <ImageView
                android:layout_width="125dp"
                android:layout_height="125dp"
                android:layout_gravity="center"
                android:layout_marginTop="100dp"
                android:src="@drawable/pinkvoice"
                android:contentDescription="@string/todo">
            </ImageView>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/pink_voice"
                android:textColor="#FFFFFF"
                android:textSize="25sp"
                android:textStyle="bold"
                android:layout_marginTop="20dp">
            </TextView>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <EditText
                android:id="@+id/idText"
                android:layout_width="280dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_margin="50dp"
                android:autofillHints="True"
                android:background="@color/colorPrimary"
                android:drawableStart="@drawable/ic_baseline_person_24"
                android:drawableLeft="@drawable/ic_baseline_person_24"
                android:hint="@string/id"
                android:padding="10dp"
                android:textColor="#FFFFFF"
                android:textColorHint="#FFFFFF"
                tools:ignore="TextFields">

            </EditText>

            <EditText
                android:id="@+id/passwordText"
                android:layout_width="280dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="10dp"
                android:background="@color/colorPrimary"
                android:drawableStart="@drawable/ic_baseline_lock_24"
                android:drawableLeft="@drawable/ic_baseline_lock_24"
                android:hint="@string/password"
                android:inputType="textPassword"
                android:padding="10dp"
                android:textColor="#FFFFFF"
                android:textColorHint="#FFFFFF">

            </EditText>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:orientation="horizontal"
                android:padding="10dp">

                <Button
                    android:id="@+id/registerButton"
                    android:layout_width="100dp"
                    android:layout_height="25dp"
                    android:layout_gravity="left"
                    android:background="@color/colorSignin"
                    android:rotationX="0"
                    android:text="@string/sign_up"
                    android:textSize="20sp"
                    app:backgroundTint="@color/colorSignin"/>

                <Button
                    android:id="@+id/loginButton"
                    android:layout_width="100dp"
                    android:layout_height="25dp"
                    android:layout_gravity="right"
                    android:background="@color/colorLogin"
                    android:text="@string/log_in"
                    android:textSize="20dp"
                    app:backgroundTint="@color/colorLogin"/>


            </LinearLayout>

        </LinearLayout>


    </LinearLayout>


    </androidx.constraintlayout.widget.ConstraintLayout>
